[package]
name = "config"
version = "0.1.0"
authors = ["zhangtailin <zhangtailin@ziggurat.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { package = "failure_ext", path = "../common/failure_ext" }
toml = "0.5.1"
serde = { version = "1.0.95", features = ["derive"] }
lazy_static = "1.3.0"