[package]
name = "consensus"
version = "0.1.0"
authors = ["zhangtailin <zhangtailin@ziggurat.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
logger = { path = "../logger" }
proto = { path = "../proto" }
crypto = { package = "crypto", path = "../common/crypto" }
config = { path = "../config" }